# rsvpte-client

./: README.md
agent_api/: README.txt
agent_api/cpp src/: Makefile.am  Makefile.in  agent_api.cpp  agent_api.h  configuration.cpp  configuration.h  mgmt_packet.cpp  mgmt_packet.h
agent_api/java src/api/: Example.java  UniAgentReceiveInterface.java  UniAgentReceiveInterfaceImplementation.java  UniAgentSendInterface.java  UniAgentSendInterfaceImplementation.java
agent_api/java src/communication/: CommunicationTCPSender.java  (+4 more)
agent_api/python src/: agent_API.py
agent_client/: GMPLS Signaling Parameters.txt  PSNC_DT_path_setup  README.txt  agent_client.py  agent_client_usage.txt
agent_rsvp/: AUTHORS  Doxyfile  Makefile.in  README  agent_rsvp.kdevelop  agent_rsvp.kdevelop.pcs  agent_rsvp.kdevses  compile_manually  configure  configure.in
agent_rsvp/config/: conf.txt
agent_rsvp/src/: .count  GetPot  Makefile.am  Makefile.in  agent_rsvp.cpp  configuration.cpp  configuration.h  floatformat.cpp  floatformat.h  generic_interface.cpp  generic_interface.h  ip_mask.cpp  ip_mask.h  ip_route.cpp  ip_route.h  mgmt_interface.cpp  mgmt_interface.h  mgmt_packet.cpp  mgmt_packet.h  mpls_ioctl.cpp  mpls_ioctl.h  rsvp_configuration.cpp  rsvp_configuration.h  rsvp_connection.cpp  rsvp_connection.h  rsvp_dispatcher.cpp  rsvp_dispatcher.h  rsvp_error.cpp  rsvp_error.h  rsvp_packet.cpp  rsvp_packet.h  rsvp_socket.cpp  rsvp_socket.h  semaphore.cpp  semaphore.h  tools.cpp  tools.h  verbose.cpp  verbose.h
docs/: The agent's management protocol description.odt  package_description.odt
(+22 files in other folders)
